[package]
name = "tender_system"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tender_system"

[features]
no-entrypoint = []
no-idl = []
no-cpi = ["no-entrypoint"]
default = []
cpi = ["no-cpi"]

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = "0.26.0"